Implemented Menu Bar and Navigation Drawer
Changes made:
- Created MenuBarHandler, which is the class that handles the
functionality of the menu bar as well as navigation drawer.
- Changed activity extends to AppCompatActivity types
- Implemented drawer and menu bar in each activity layout file

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,129 +1,185 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.carprototype.carapp.MapsActivity" >
-    <RelativeLayout
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/menubar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="180dp">
-            <AutoCompleteTextView android:id="@+id/search_text"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_margin="10dp"
-                android:textSize="16sp"
-                android:padding="24dp"
-                android:hint="@string/search_hint"
-                android:background="@drawable/search_bg"
-                android:completionThreshold="1"
-                android:gravity="end|center_vertical"
-                android:textColorHint="#000000"
-                android:maxLines="1"
-                android:layout_weight="1"/>
-
-            <Button android:id="@+id/confirm_pickup_dest_button"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:textSize="26sp"
-                android:padding="5dp"
-                android:text="Confirm"
-                android:textColor="#FFFFFF"
-                android:gravity="center"
-                android:background="@drawable/confirm_pickup_dest_button_selector"
-                android:visibility="invisible"
-                android:layout_weight="1"/>
-        </LinearLayout>
-
+        android:layout_height="60dp"
+        android:padding="6dp"
+        android:background="@color/red">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:gravity="bottom"
-            android:layout_alignParentBottom="true">
-            <TextView android:id="@+id/pickup_location_textview"
-                android:gravity="center"
-                android:layout_height="50dp"
+            android:weightSum="5">
+            <ImageView android:id="@+id/menu_button"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/menu_button"
+                android:gravity="center_vertical"
                 android:layout_weight="1"
-                android:textColor="#FFFFFF"
-                android:textSize="12sp"
-                android:background="@drawable/pickup_dest_textview_bg"
-                android:layout_margin="5dp"/>
-            <TextView android:id="@+id/dest_location_textview"
-                android:gravity="center"
-                android:layout_height="50dp"
+                android:padding="5dp"/>
+            <ImageView android:id="@+id/vozie_logo"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/vozie_title"
+                android:gravity="center_vertical"
+                android:layout_weight="3" />
+            <ImageView android:id="@+id/settings_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/settings_button"
+                android:gravity="center_vertical"
                 android:layout_weight="1"
-                android:textColor="#FFFFFF"
-                android:textSize="12sp"
-                android:background="@drawable/pickup_dest_textview_bg"
-                android:layout_margin="5dp"/>
+                android:padding="5dp"/>
         </LinearLayout>
-        <LinearLayout android:id="@+id/location_input_menu"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@color/red"
-            android:layout_alignParentBottom="true">
-            <LinearLayout android:id="@+id/pickup_layout"
-                android:orientation="vertical"
-                android:layout_width="0dp"
+    </android.support.v7.widget.Toolbar>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-                <ImageView android:id="@+id/house_image_view"
-                    android:layout_height="0dp"
+                tools:context="com.example.carprototype.carapp.MapsActivity" >
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/house" />
-                <TextView
-                    android:text="Pickup Location"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
-                    android:id="@+id/pickup_button" />
-            </LinearLayout>
-            <View
-                android:layout_width="1px"
-                android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"/>
-            <LinearLayout android:id="@+id/dest_layout"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-                <ImageView android:id="@+id/dest_image_view"
-                    android:layout_height="0dp"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/dest_marker"/>
-                <TextView
-                    android:text="Destination Location"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
-                    android:id="@+id/dropoff_button" />
-            </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp">
+                        <AutoCompleteTextView android:id="@+id/search_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:layout_margin="10dp"
+                            android:textSize="16sp"
+                            android:padding="24dp"
+                            android:hint="@string/search_hint"
+                            android:background="@drawable/search_bg"
+                            android:completionThreshold="1"
+                            android:gravity="end|center_vertical"
+                            android:textColorHint="#000000"
+                            android:textColor="#000000"
+                            android:maxLines="1"
+                            android:layout_weight="1"/>
+
+                        <Button android:id="@+id/confirm_pickup_dest_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:textSize="26sp"
+                            android:padding="5dp"
+                            android:text="Confirm"
+                            android:textColor="#FFFFFF"
+                            android:gravity="center"
+                            android:background="@drawable/confirm_pickup_dest_button_selector"
+                            android:visibility="invisible"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="horizontal"
+                        android:gravity="bottom"
+                        android:layout_alignParentBottom="true">
+                        <TextView android:id="@+id/pickup_location_textview"
+                            android:gravity="center"
+                            android:layout_height="50dp"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:textColor="#FFFFFF"
+                            android:textSize="12sp"
+                            android:background="@drawable/pickup_dest_textview_bg"
+                            android:layout_margin="5dp"/>
+                        <TextView android:id="@+id/dest_location_textview"
+                            android:gravity="center"
+                            android:layout_height="50dp"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:textColor="#FFFFFF"
+                            android:textSize="12sp"
+                            android:background="@drawable/pickup_dest_textview_bg"
+                            android:layout_margin="5dp"/>
+                    </LinearLayout>
+                    <LinearLayout android:id="@+id/location_input_menu"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:background="@color/red"
+                        android:layout_alignParentBottom="true">
+                        <LinearLayout android:id="@+id/pickup_layout"
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+                            <ImageView android:id="@+id/house_image_view"
+                                android:layout_height="0dp"
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_marginTop="10dp"
+                                android:src="@drawable/house" />
+                            <TextView
+                                android:text="Pickup Location"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:fontFamily="sans-serif-light"
+                                android:textColor="#FFFFFF"
+                                android:textSize="18sp"
+                                android:id="@+id/pickup_button" />
+                        </LinearLayout>
+                        <View
+                            android:layout_width="1px"
+                            android:layout_height="match_parent"
+                            android:background="@android:color/white"
+                            android:layout_marginBottom="10dp"
+                            android:layout_marginTop="10dp"/>
+                        <LinearLayout android:id="@+id/dest_layout"
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+                            <ImageView android:id="@+id/dest_image_view"
+                                android:layout_height="0dp"
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:layout_marginTop="10dp"
+                                android:src="@drawable/dest_marker"/>
+                            <TextView
+                                android:text="Destination Location"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:fontFamily="sans-serif-light"
+                                android:textColor="#FFFFFF"
+                                android:textSize="18sp"
+                                android:id="@+id/dropoff_button" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </RelativeLayout>
+            </fragment>
         </LinearLayout>
-    </RelativeLayout>
-</fragment>
+        <ListView
+            android:id="@+id/drawer_list"
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#000"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp" />
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
