--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,31 +1,84 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
-    tools:context="com.example.carprototype.carapp.PaymentActivity">
-    <ListView android:id="@+id/main_list"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/menubar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:dividerHeight="10dp"
-        android:divider="#FFFFFF"
-        android:animateLayoutChanges="true"
-        android:layout_marginBottom="20dp"/>
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/new_payment_item"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:layout_weight="1">
-        <ImageView android:layout_height="match_parent"
+        android:layout_height="60dp"
+        android:padding="6dp"
+        android:background="@color/red">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:src="@drawable/plus"
-            android:layout_gravity="bottom"
-            android:padding="15dp"
-            android:background="@drawable/new_payment_top_panel_border"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="5">
+            <ImageView android:id="@+id/menu_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/menu_button"
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:padding="5dp"/>
+            <ImageView android:id="@+id/vozie_logo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/vozie_title"
+                android:gravity="center_vertical"
+                android:layout_weight="3" />
+            <ImageView android:id="@+id/settings_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/settings_button"
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:padding="5dp"/>
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:background="#FFFFFF"
+            android:orientation="vertical"
+            tools:context="com.example.carprototype.carapp.PaymentActivity">
+            <ListView android:id="@+id/main_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:dividerHeight="10dp"
+                android:divider="#FFFFFF"
+                android:animateLayoutChanges="true"
+                android:layout_marginBottom="20dp"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/new_payment_item"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1">
+                <ImageView android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:src="@drawable/plus"
+                    android:layout_gravity="bottom"
+                    android:padding="15dp"
+                    android:background="@drawable/new_payment_top_panel_border"/>
+            </LinearLayout>
+        </LinearLayout>
+        <ListView
+            android:id="@+id/drawer_list"
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#000"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp" />
+    </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
