--- a/app/src/main/res/layout/auto_complete_textview_item.xml
+++ b/app/src/main/res/layout/auto_complete_textview_item.xml
@@ -5,4 +5,5 @@
     android:gravity="center_vertical"
     android:padding="3dp"
     android:textColor="#000000"
+    android:background="#FFFFFF"
     android:textSize="18sp" />
