Added MilesCircleLayout as well as MilesActivity
Changes made:
- Added the circular UI for changing miles to purchase
- Added MilesActivity and activity_miles.xml with drawer and menu bar
- Added handling for milesactivity in menubarhandler

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="lightRed">#FF7F7F</color>
     <color name="red">#A13130</color>
     <color name="darkRed">#7F0000</color>
+    <color name="gray">#666666</color>
 </resources>
